--- a/TestNGProject/.classpath
+++ b/TestNGProject/.classpath
@@ -37,5 +37,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="src" path="/mavenProject"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
